Lab 1 - Additional Req added

--- a/lab-0/index.html
+++ b/lab-0/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +9,7 @@
 </head>
 <body>
     <h1 class="box-one">Hello World</h1>
-    <h1 class="box-two">World</h1>
+    <button class="box-two">Click Me</button>
+    <script src="script.js"></script>
 </body>
 </html>
