--- a/lab-1/problem-1/index.html
+++ b/lab-1/problem-1/index.html
@@ -8,61 +8,15 @@
     <title>Flexible Grid</title>
 </head>
 <body>
-    <div class="row">
-    <div class="column">
-        <div class="inner-grid">
-            <div class="cell-pair">
-                <div class="cell">1</div>
-                <div class="cell">2</div>
-            </div>
-            <div class="cell-pair">
-                <div class="cell">3</div>
-                <div class="cell">4</div>
-            </div>
-        </div>
+    <div class="container">
+        <div class="cell">1</div>
+        <div class="cell">2</div>
+        <div class="cell">3</div>
+        <div class="cell">4</div>
     </div>
-    <div class="column">
-        <div class="inner-grid">
-            <div class="cell-pair">
-                <div class="cell">1</div>
-                <div class="cell">2</div>
-            </div>
-            <div class="cell-pair">
-                <div class="cell">3</div>
-                <div class="cell">4</div>
-            </div>
-        </div>
-    </div>
-    <div class="column">
-        <div class="inner-grid">
-            <div class="cell-pair">
-                <div class="cell">1</div>
-                <div class="cell">2</div>
-            </div>
-            <div class="cell-pair">
-                <div class="cell">3</div>
-                <div class="cell">4</div>
-            </div>
-        </div>
-    </div>
-    <div class="column">
-        <div class="inner-grid">
-            <div class="cell-pair">
-                <div class="cell">1</div>
-                <div class="cell">2</div>
-            </div>
-            <div class="cell-pair">
-                <div class="cell">3</div>
-                <div class="cell">4</div>
-            </div>
-        </div>
-    </div>
-</div>
-
 
     <div id="windowWidthDisplay">
         <p></p>
     </div>
-    
 </body>
 </html>
